tools/data-handler/test/test-data/invalid/invalid-link-type-broken-card-type-ref/.cards/local/reports/eqNeReport/.schema
[
  {
    "version": 1,
    "id": "reportSchema",
    "file": "../anotherReport.json"
  }
]